--- a/trunk/0xCAFE/res/values/strings.xml
+++ b/trunk/0xCAFE/res/values/strings.xml
@@ -37,7 +37,13 @@
         is indicating an unfinished computation of digits after the decimal point.</string>
     <string name="help_developers">Developed by Bitfröst Studios</string>
     <string name="help_terms">This app is available opensource under https://zeroxcafe.googlecode.com</string>
-    <string name="help_rate">Rate in Play store</string>
+    <string name="help_rate">Rate in Play store &#8230;</string>
+    <string name="help_mail">Write mail to developers &#8230;</string>
+    <string name="mail_to">bitfroest@gmail.com</string>
+    <string name="mail_subject">About 0xCAFE</string>
+    <string name="mail_text">Dear Bitfröst Studios,{n}I got an idea, found a bug or just want to appreciate your work.{n}{n}I &#8230;{n}{n}With best regards,{n}&#8230;</string>
+    <string name="mail_chooser">Send mail &#8230;</string>
+    <string name="mail_error">No mail client found.</string>
     <string name="title_activity_wiki">Wiki</string>
     <string name="copy_result">Copy result to clipboard</string>
     <string name="copy_result_success">Result was copied to clipboard.</string>
